@@ -8,6 +8,7 @@ source "$APPSDIR/examples/buttons/Kconfig"
 source "$APPSDIR/examples/can/Kconfig"
 source "$APPSDIR/examples/cdcacm/Kconfig"
 source "$APPSDIR/examples/composite/Kconfig"
+source "$APPSDIR/examples/cxxtest/Kconfig"
 source "$APPSDIR/examples/dhcpd/Kconfig"
 source "$APPSDIR/examples/elf/Kconfig"
 source "$APPSDIR/examples/ftpc/Kconfig"
